# OTPilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  content.js  docker-compose.yml  manifest.json  package-lock.json  package.json  playwright.config.js  popup.html  popup.js
.github/workflows/: api.yml  e2e.yml  web.yml
api/: .env.example  Cargo.toml  Dockerfile  README.md
api/migrations/: 0001_create_users.sql  0002_create_accounts.sql  0003_create_teams.sql  0004_create_devices.sql  0005_create_sync_logs.sql  0006_sync_logs_trim_trigger.sql  0007_add_pending_deletion.sql  0008_create_domain_icons.sql  0009_add_has_personal_cloud.sql  0010_invite_expiry.sql  0011_user_public_key.sql  0012_share_access_2of2.sql  0013_add_user_email.sql  0014_shared_code_email.sql  0015_one_team_per_user.sql
api/src/: db.rs  email.rs  error.rs  main.rs
api/src/middleware/: auth.rs  rate_limit.rs
api/src/routes/: accounts.rs  auth.rs  billing.rs  devices.rs  icons.rs  mod.rs  teams.rs
docs/: privacy.html
extension/: Makefile  README.md  background.js  cloudSync.js  config.example.js  config.test.js  content.js  email-reader.js  keys.js  links.js  manifest.json  package.json  playwright.config.js  popup.html  popup.js  sharing.js  supabase.js  totp.js  use-config.sh
extension/test/: 2fa-host-modal.html  2fa-input-secret.html  2fa-plaintext.html  autofill.html  email-empty.html  email-fastmail-body.html  email-fastmail.html  email-gmail-body.html  email-gmail.html  email-lengths.html  email-no-keyword.html  email-outlook-body.html  email-outlook.html  email-proton-body.html  email-proton.html  email-recency.html  email-yahoo-body.html  email-yahoo.html  email-zoho-body.html  email-zoho.html  enrollment.html  multi-alice.html  multi-bob.html  otp-split.html  qr-anchor.html  qr-img-modal.html  qr-img.html  qr-svg.html  settings-authentication.html
extension/tests/: autofill.spec.js  email-reader.spec.js  fixtures.js  global-setup.js  global-teardown.js  icons.spec.js  popup.spec.js  setup.spec.js
test/: acme1-setup.html  acme2-setup.html  autofill.html  qr-modal.html  qr-only.html  setup.html
tests/: setup.spec.js
web/: .env.example  LICENSE  README.md  index.html  package-lock.json  package.json  vercel.json
web/public/: llms.txt  robots.txt  sitemap.xml
web/src/: App.tsx  index.css  main.tsx
web/src/components/: FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Navbar.tsx  Pricing.tsx
web/src/lib/: api.ts  browser.ts  (+3 more)
(+16 files in other folders)
