[package]
name = "api"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Alberto Paparelli"]
homepage = "https://otpilot.app"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
# Domain favicon pipeline: fetch + normalize to PNG + store in S3/R2.
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "ico", "jpeg", "webp", "gif"] }
psl = "2"  # embedded Public Suffix List → registrable domain (eTLD+1) for the favicon parent-domain fallback
sentry = { version = "0.48", features = ["anyhow", "tracing", "tower", "tower-axum-matched-path", "logs"] }

[profile.release]
opt-level = 3
strip = true
